create github pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/whatsapp-image-2019-07-17-at-8.03.57-am-122x138.jpg" type="image/x-icon">
   <meta name="description" content="">
   
-  <title>Home</title>
+  <title>Jaguar Sanitary</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="cid-rwuP1Wqvwx" id="image2-9">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="cid-rwuP1Wqvwx" id="image2-9">
 
     
 
